--- a/.github/workflows/scheduled-keepalive.yaml
+++ b/.github/workflows/scheduled-keepalive.yaml
@@ -16,19 +16,19 @@ jobs:
     name: Keep scheduled GitHub workflows alive
     runs-on: ubuntu-latest
     steps:
-      - name: Get GitHub API token
-        id: get-app-token
-        uses: getsentry/action-github-app-token@v2
+      - name: Generate Token
+        uses: tibdex/github-app-token@3beb63f4bd073e61482598c45c71c1019b59b73a # v2.1.0
+        id: generate-token
         with:
-          app_id: ${{ secrets.BOT_APP_ID }}
-          private_key: ${{ secrets.BOT_APP_PRIVATE_KEY }}
+          app_id: "${{ secrets.BOT_APP_ID }}"
+          private_key: "${{ secrets.BOT_APP_PRIVATE_KEY }}"
 
       - name: Checkout main branch
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
         with:
-          token: ${{ steps.get-app-token.outputs.token }}
+          token: ${{ steps.generate-token.outputs.token }}
 
       - name: Keep scheduled GitHub workflows alive
         uses: gautamkrishnar/keepalive-workflow@v1
         with:
-          gh_token: ${{ steps.get-app-token.outputs.token }}
+          gh_token: ${{ steps.generate-token.outputs.token }}
