--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,15 @@
         "--tls-cert-dir",
         "${workspaceFolder}/certs",
       ]
+    },
+    {
+      "name": "Launch Tests",
+      "type": "go",
+      "request": "launch",
+      "mode": "test",
+      "program": "${workspaceFolder}/src",
+      "env": {},
+      "args": [],
     }
   ]
 }
