feat: change to policy based checks, restructure, remove test (for now)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
       "type": "go",
       "request": "launch",
       "mode": "auto",
-      "program": "${workspaceFolder}/src",
+      "program": "${workspaceFolder}/internal",
       "args": [
         "--tls-cert-dir",
         "${workspaceFolder}/certs",
@@ -20,7 +20,7 @@
       "type": "go",
       "request": "launch",
       "mode": "test",
-      "program": "${workspaceFolder}/src",
+      "program": "${workspaceFolder}/internal",
       "env": {},
       "args": [],
     }
