--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -60,6 +60,8 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          secrets: |
+            GIT_AUTH_TOKEN=${{ steps.generate-token.outputs.token }}
 
       - name: Create GitHub release
         # Create a release when a tag is pushed
